cabal-version:  2.2
name:           mcmc-examples
version:        0.4.0.0
synopsis:       Markov chain Monte Carlo examples using the `mcmc` library
description:    Please see the README on GitHub at <https://github.com/dschrempf/mcmc#readme>
category:       Math, Statistics
homepage:       https://github.com/dschrempf/mcmc#readme
bug-reports:    https://github.com/dschrempf/mcmc/issues
author:         Dominik Schrempf
maintainer:     dominik.schrempf@gmail.com
copyright:      Dominik Schrempf (2020)
license:        GPL-3.0-or-later
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/dschrempf/mcmc

common lib
  ghc-options: -Wall -Wunused-packages
  default-language: Haskell2010

common test
  ghc-options: -Wall -Wunused-packages
  default-language: Haskell2010

common bench
  ghc-options: -Wall -Wunused-packages
  default-language: Haskell2010

common exec
  ghc-options: -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable archery
  import: exec
  main-is: Archery.hs
  other-modules:
      Paths_mcmc_examples
  autogen-modules:
      Paths_mcmc_examples
  hs-source-dirs: Archery
  build-depends:
      base
    , log-domain
    , mcmc
    , mwc-random
    , statistics

executable dirichlet
  import: exec
  main-is: Dirichlet.hs
  other-modules:
      Paths_mcmc_examples
  autogen-modules:
      Paths_mcmc_examples
  hs-source-dirs:
      Dirichlet
  build-depends:
      aeson
    , base
    , dirichlet
    , lens
    , mcmc
    , mwc-random
    , vector

executable plh
  import: exec
  main-is: PhylogeneticLikelihood.hs
  other-modules:
      Paths_mcmc_examples
  autogen-modules:
      Paths_mcmc_examples
  hs-source-dirs:
      PhylogeneticLikelihood
  build-depends:
      aeson
    , algebraic-graphs
    , base
    , log-domain
    , mcmc
    , microlens
    , mwc-random
    , statistics

executable test-pair
  import: exec
  main-is: TestPair.hs
  other-modules:
      Paths_mcmc_examples
  autogen-modules:
      Paths_mcmc_examples
  hs-source-dirs: TestPair
  build-depends:
      base
    , lens
    , log-domain
    , mcmc
    , mwc-random

executable test-tree
  import: exec
  main-is: TestTree.hs
  other-modules:
      Paths_mcmc_examples
  autogen-modules:
      Paths_mcmc_examples
  hs-source-dirs: TestTree
  build-depends:
      aeson
    , base
    , elynx-tree
    , lens
    , mcmc
    , mcmc-tree
    , mwc-random