cabal-version:      3.0
name:               mcmc-examples
version:            0.6.2.5
synopsis:           Markov chain Monte Carlo examples using the `mcmc` library
description:
  Please see the README on GitHub at <https://github.com/dschrempf/mcmc#readme>

category:           Math, Statistics
homepage:           https://github.com/dschrempf/mcmc#readme
bug-reports:        https://github.com/dschrempf/mcmc/issues
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          Dominik Schrempf (2021)
license:            GPL-3.0-or-later
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/dschrempf/mcmc

common lib
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010

common test
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010

common bench
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010

common exec
  ghc-options:
    -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010

executable archery
  import:          exec
  main-is:         Archery.hs
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  hs-source-dirs:  Archery
  build-depends:
    , base
    , mcmc
    , mwc-random
    , statistics

executable dirichlet
  import:          exec
  main-is:         Dirichlet.hs
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  hs-source-dirs:  Dirichlet
  build-depends:
    , aeson
    , base
    , dirichlet
    , lens
    , mcmc
    , mwc-random
    , vector

-- , statistics
executable gauss
  import:          exec
  main-is:         Gauss.hs
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  hs-source-dirs:  Gauss
  build-depends:
    , base
    , lens
    , mcmc
    , mwc-random

executable hamiltonian
  import:          exec
  main-is:         Hamiltonian.hs
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  hs-source-dirs:  Hamiltonian
  build-depends:
    , base
    , hmatrix
    , lens
    , mcmc
    , mwc-random
    , vector

executable pair
  import:          exec
  main-is:         Pair.hs
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  hs-source-dirs:  Pair
  build-depends:
    , base
    , hmatrix
    , lens
    , mcmc
    , mwc-random
    , vector

-- , ad
-- , hmatrix
-- , vector

executable plh
  import:          exec
  main-is:         PhylogeneticLikelihood.hs
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  hs-source-dirs:  PhylogeneticLikelihood
  build-depends:
    , aeson
    , algebraic-graphs
    , base
    , mcmc
    , microlens
    , mwc-random
    , statistics
