cabal-version:      3.0
name:               mcmc-examples
version:            0.8.0.1
synopsis:           Markov chain Monte Carlo examples using the `mcmc` library
description:
  Please see the README on GitHub at <https://github.com/dschrempf/mcmc#readme>

category:           Math, Statistics
homepage:           https://github.com/dschrempf/mcmc#readme
bug-reports:        https://github.com/dschrempf/mcmc/issues
author:             Dominik Schrempf
maintainer:         dominik.schrempf@gmail.com
copyright:          2021 Dominik Schrempf
license:            GPL-3.0-or-later
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/dschrempf/mcmc

common lib
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010

common test
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010

common bench
  ghc-options:      -Wall -Wunused-packages
  default-language: Haskell2010

common exec
  ghc-options:
    -Wall -Wunused-packages -threaded -rtsopts -with-rtsopts=-N

  default-language: Haskell2010

executable archery
  import:          exec
  main-is:         Archery.hs
  hs-source-dirs:  Archery
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  build-depends:
    , base
    , mcmc
    , random
    , statistics

executable dirichlet
  import:          exec
  main-is:         Dirichlet.hs
  hs-source-dirs:  Dirichlet
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  build-depends:
    , aeson
    , base
    , dirichlet
    , lens
    , mcmc
    , random
    , vector

-- , statistics
executable gauss
  import:          exec
  main-is:         Gauss.hs
  hs-source-dirs:  Gauss
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  build-depends:
    , base
    , lens
    , mcmc
    , random

executable hamiltonian
  import:          exec
  main-is:         Hamiltonian.hs
  hs-source-dirs:  Hamiltonian
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  build-depends:
    , base
    , lens
    , mcmc
    , random
    , vector

executable pair
  import:          exec
  main-is:         Pair.hs
  hs-source-dirs:  Pair
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  build-depends:
    , base
    , mcmc
    , random
    , vector

executable plh
  import:          exec
  main-is:         PhylogeneticLikelihood.hs
  hs-source-dirs:  PhylogeneticLikelihood
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  build-depends:
    , aeson
    , algebraic-graphs
    , base
    , mcmc
    , microlens
    , random
    , statistics

executable poisson
  import:          exec
  main-is:         Poisson.hs
  hs-source-dirs:  Poisson
  other-modules:   Paths_mcmc_examples
  autogen-modules: Paths_mcmc_examples
  ghc-options:
  build-depends:
    , base
    , mcmc
    , random
