cabal-version:  3.0
name:           mcmc-statistics
version:        0.6.2.1
synopsis:       Analyze Markov chain Monte Carlo runs
description:    Please see the README on GitHub at <https://github.com/dschrempf/mcmc#readme>
category:       Math, Statistics
homepage:       https://github.com/dschrempf/mcmc#readme
bug-reports:    https://github.com/dschrempf/mcmc/issues
author:         Dominik Schrempf
maintainer:     dominik.schrempf@gmail.com
copyright:      Dominik Schrempf (2021)
license:        GPL-3.0-or-later
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/dschrempf/mcmc

common lib
  default-language: Haskell2010
  ghc-options: -Wall -Wunused-packages

common test
  default-language: Haskell2010
  ghc-options: -Wall -Wunused-packages -Werror

common bench
  default-language: Haskell2010
  ghc-options: -Wall -Wunused-packages -Werror

common exec
  default-language: Haskell2010
  ghc-options: -Wall -Wunused-packages -Werror -threaded -rtsopts -with-rtsopts=-N

library
  import: lib
  exposed-modules:
      Mcmc.Statistics
  other-modules:
      Paths_mcmc_statistics
  autogen-modules:
      Paths_mcmc_statistics
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , pava
    , statistics
    , vector

test-suite mcmc-statistics-test
  import: test
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  hs-source-dirs:  test
  -- other-modules:
  -- autogen-modules:
  -- ghc-options:
  build-depends:
      base >=4.7 && <5
    , hspec
