cabal-version:       2.2
name:                mcmc-tree
version:             0.5.0.0
synopsis:            Markov chain Monte Carlo sampler on trees
description:         Please see the README on GitHub at <https://github.com/dschrempf/mcmc#readme>
category:            Math, Statistics
homepage:            https://github.com/dschrempf/mcmc#readme
bug-reports:         https://github.com/dschrempf/mcmc/issues
author:              Dominik Schrempf
maintainer:          dominik.schrempf@gmail.com
copyright:           Dominik Schrempf (2021)
license:             GPL-3.0-or-later
build-type:          Simple

extra-source-files:
    README.md
    ChangeLog.md
    data/bench.tree

source-repository head
  type: git
  location: https://github.com/dschrempf/mcmc

common lib
  ghc-options: -Wall -Wunused-packages
  default-language: Haskell2010

common test
  ghc-options: -Wall -Werror -Wunused-packages
  default-language: Haskell2010

common bench
  ghc-options: -Wall -Werror -Wunused-packages
  default-language: Haskell2010

common exec
  ghc-options: -Wall -Werror -Wunused-packages
  default-language: Haskell2010

library
  import: lib
  exposed-modules:
      Mcmc.Tree
      Mcmc.Tree.Import
      Mcmc.Tree.Lens
      Mcmc.Tree.Monitor
      Mcmc.Tree.Mrca
      Mcmc.Tree.Prior.BirthDeath
      Mcmc.Tree.Prior.Branch
      Mcmc.Tree.Prior.Branch.RelaxedClock
      Mcmc.Tree.Prior.Node.Calibration
      Mcmc.Tree.Prior.Node.Common
      Mcmc.Tree.Prior.Node.Constraint
      Mcmc.Tree.Proposal.Contrary
      Mcmc.Tree.Proposal.Ultrametric
      Mcmc.Tree.Proposal.Unconstrained
      Mcmc.Tree.Types
  other-modules:
      Mcmc.Tree.Proposal.Common
      Statistics.Distribution.TruncatedNormal
      Paths_mcmc_tree
  autogen-modules:
      Paths_mcmc_tree
  hs-source-dirs: src
  build-depends:
      aeson
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , cassava
    , containers
    , deepseq
    , dirichlet
    , elynx-tree
    , lens
    , log-domain
    , math-functions
    , mcmc
    , mwc-random
    , statistics
    , vector
    , zlib

benchmark tree-bench
  import: bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  other-modules:
      Paths_mcmc_tree
  hs-source-dirs: bench
  build-depends:
      base >=4.7 && <5
    , criterion
    , elynx-tree
    , lens
    , mcmc-tree