cabal-version:  2.2
name:           mcmc
version:        0.4.0.0
synopsis:       Sample from a posterior using Markov chain Monte Carlo
description:    Please see the README on GitHub at <https://github.com/dschrempf/mcmc#readme>
category:       Math, Statistics
homepage:       https://github.com/dschrempf/mcmc#readme
bug-reports:    https://github.com/dschrempf/mcmc/issues
author:         Dominik Schrempf
maintainer:     dominik.schrempf@gmail.com
copyright:      Dominik Schrempf (2020)
license:        GPL-3.0-or-later
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/dschrempf/mcmc

library
  exposed-modules:
      Mcmc
      Mcmc.Algorithm
      Mcmc.Algorithm.Metropolis
      Mcmc.Algorithm.MC3
      Mcmc.Chain.Chain
      Mcmc.Chain.Link
      Mcmc.Chain.Save
      Mcmc.Chain.Trace
      Mcmc.Environment
      Mcmc.Mcmc
      Mcmc.Monitor
      Mcmc.Monitor.Log
      Mcmc.Monitor.Parameter
      Mcmc.Monitor.ParameterBatch
      Mcmc.Monitor.Time
      Mcmc.Prior
      Mcmc.Proposal
      Mcmc.Proposal.Bactrian
      Mcmc.Proposal.Generic
      Mcmc.Proposal.Scale
      Mcmc.Proposal.Slide
      Mcmc.Proposal.Simplex
      Mcmc.Settings
  other-modules:
      Mcmc.Internal.ByteString
      Mcmc.Internal.Random
      Mcmc.Internal.Shuffle
      Paths_mcmc
  autogen-modules:
      Paths_mcmc
  hs-source-dirs:
      src
  ghc-options: -Wall
  -- ghc-options: -Wall -Werror
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , circular
    , containers
    , data-default
    , deepseq
    , directory
    , dirichlet
    , double-conversion
    , log-domain
    , math-functions
    , microlens
    , mwc-random
    , monad-parallel
    , parallel
    , pretty-show
    , primitive
    , statistics
    , time
    , transformers
    , vector
    , zlib
  default-language: Haskell2010

test-suite mcmc-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Mcmc.ProposalSpec
      Mcmc.SaveSpec
      Paths_mcmc
  hs-source-dirs:
      test
  ghc-options: -Wall -Werror
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , directory
    , hspec
    , hspec-discover
    , log-domain
    , mcmc
    , mwc-random
    , statistics
    , vector
  default-language: Haskell2010

benchmark mcmc-bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  other-modules:
      Normal
      Poisson
      Paths_mcmc
  hs-source-dirs:
      bench
  ghc-options: -Wall -Werror -threaded
  build-depends:
      base >=4.7 && <5
    , criterion
    , log-domain
    , mcmc
    , microlens
    , mwc-random
    , statistics
    , vector
  default-language: Haskell2010
