cabal-version:  2.2
name:           mcmc
version:        0.4.0.0
synopsis:       Sample from a posterior using Markov chain Monte Carlo
description:    Please see the README on GitHub at <https://github.com/dschrempf/mcmc#readme>
category:       Math, Statistics
homepage:       https://github.com/dschrempf/mcmc#readme
bug-reports:    https://github.com/dschrempf/mcmc/issues
author:         Dominik Schrempf
maintainer:     dominik.schrempf@gmail.com
copyright:      Dominik Schrempf (2020)
license:        GPL-3.0-or-later
build-type:     Simple

extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/dschrempf/mcmc

common lib
  ghc-options: -Wall -Wunused-packages
  default-language: Haskell2010

common test
  ghc-options: -Wall -Werror -Wunused-packages
  default-language: Haskell2010

common bench
  ghc-options: -Wall -Werror -Wunused-packages
  default-language: Haskell2010

common exec
  ghc-options: -Wall -Werror -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

library
  import: lib
  exposed-modules:
      Mcmc
      Mcmc.Algorithm
      Mcmc.Algorithm.Metropolis
      Mcmc.Algorithm.MC3
      Mcmc.Chain.Chain
      Mcmc.Chain.Link Mcmc.Chain.Save
      Mcmc.Chain.Trace
      Mcmc.Environment
      Mcmc.Mcmc
      Mcmc.Monitor
      Mcmc.Monitor.Log
      Mcmc.Monitor.Parameter
      Mcmc.Monitor.ParameterBatch
      Mcmc.Monitor.Time
      Mcmc.Prior
      Mcmc.Proposal
      Mcmc.Proposal.Bactrian
      Mcmc.Proposal.Generic
      Mcmc.Proposal.Scale
      Mcmc.Proposal.Slide
      Mcmc.Proposal.Simplex
      Mcmc.Settings
  other-modules:
      Mcmc.Internal.ByteString
      Mcmc.Internal.Random
      Mcmc.Internal.Shuffle
      Paths_mcmc
  autogen-modules:
      Paths_mcmc
  hs-source-dirs: src
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , circular
    , containers
    , data-default
    , deepseq
    , directory
    , dirichlet
    , double-conversion
    , log-domain
    , microlens
    , mwc-random
    , monad-parallel
    , pretty-show
    , primitive
    , statistics
    , time
    , transformers
    , vector
    , zlib

test-suite mcmc-test
  import: test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Mcmc.ProposalSpec
      Mcmc.SaveSpec
      Paths_mcmc
  hs-source-dirs: test
  build-depends:
      base >=4.7 && <5
    , hspec
    , log-domain
    , mcmc
    , mwc-random
    , statistics

benchmark mcmc-bench
  import: bench
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  other-modules:
      Normal
      Poisson
      Paths_mcmc
  hs-source-dirs: bench
  build-depends:
      base >=4.7 && <5
    , criterion
    , log-domain
    , mcmc
    , microlens
    , mwc-random
